[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Tutorial-1.gd" type="Script" id=1]
[ext_resource path="res://Assets/tree.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 8 )

[node name="Tutorial" type="Area2D"]
position = Vector2( 176, 576 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 112.0
margin_top = -472.0
margin_right = 568.0
margin_bottom = -296.0
custom_colors/default_color = Color( 1, 0.572549, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Touch the tree if you feel lost. Touch it again if you still feel lost.[/center]"
text = "Touch the tree if you feel lost. Touch it again if you still feel lost."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Tutorial_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Tutorial_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
